; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/extr_seq_midi_emul.c_snd_midi_reset_controllers.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/extr_seq_midi_emul.c_snd_midi_reset_controllers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_midi_channel = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_midi_channel*)* @snd_midi_reset_controllers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_midi_reset_controllers(%struct.snd_midi_channel* %0) #0 {
  %2 = alloca %struct.snd_midi_channel*, align 8
  store %struct.snd_midi_channel* %0, %struct.snd_midi_channel** %2, align 8
  %3 = load %struct.snd_midi_channel*, %struct.snd_midi_channel** %2, align 8
  %4 = getelementptr inbounds %struct.snd_midi_channel, %struct.snd_midi_channel* %3, i32 0, i32 3
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @memset(i32 %5, i32 0, i32 4)
  %7 = load %struct.snd_midi_channel*, %struct.snd_midi_channel** %2, align 8
  %8 = getelementptr inbounds %struct.snd_midi_channel, %struct.snd_midi_channel* %7, i32 0, i32 0
  store i32 127, i32* %8, align 4
  %9 = load %struct.snd_midi_channel*, %struct.snd_midi_channel** %2, align 8
  %10 = getelementptr inbounds %struct.snd_midi_channel, %struct.snd_midi_channel* %9, i32 0, i32 1
  store i32 127, i32* %10, align 4
  %11 = load %struct.snd_midi_channel*, %struct.snd_midi_channel** %2, align 8
  %12 = getelementptr inbounds %struct.snd_midi_channel, %struct.snd_midi_channel* %11, i32 0, i32 2
  store i32 64, i32* %12, align 4
  ret void
}

declare dso_local i32 @memset(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
